--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ h1 {
 
 .parallax { 
   /* The image used */
+  position: relative;
   background-image: url("images/test.png");
 
   /* Set a specific height */
@@ -69,12 +70,22 @@ h1 {
 
 
 .parallax_aboutme{
+  position: relative;
     height: 500px;
     background-color: #d4d4dc;
     font-size: 24px;
     opacity: 0.7;
     z-index: 2;
 
+}
+.parallax_projects{
+    position: relative;
+    max-height: 100px;
+    height: 100%;
+    background-color: #d4d4dc;
+    font-size: 24px;
+    opacity: 0.7;
+    z-index: 2;
 }
 
 #profile_pic{
@@ -106,5 +117,9 @@ h1 {
     
 }
 
+#parallax_projects_row{
+  position: absolute;
+  /*top: 100px;*/
+}
 
 
