--- a/veryStylish.css
+++ b/veryStylish.css
@@ -43,5 +43,13 @@ ont-family: monospace;
 }
 .basic_text{
 	color: white;
-
 }
+
+#links_logo{
+ width: 35px;
+ height: 25px;
+}
+
+.hover_img a { position:relative; }
+.hover_img a span { position:absolute; display:none; z-index:99; }
+.hover_img a:hover span { display:block; }
