--- a/veryStylish.css
+++ b/veryStylish.css
@@ -53,3 +53,32 @@ ont-family: monospace;
 .hover_img a { position:relative; }
 .hover_img a span { position:absolute; display:none; z-index:99; }
 .hover_img a:hover span { display:block; }
+
+
+a.button5{
+     display:inline-block;
+     padding:0.46em 1.6em;
+     border:0.1em solid #000000;
+     margin:0 0.2em 0.2em 0;
+     border-radius:0.12em;
+     box-sizing: border-box;
+     text-decoration:none;
+     font-family:'Roboto',sans-serif;
+     font-weight:300;
+     color:#000000;
+     text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+     background-color:#FFFFFF;
+     text-align:center;
+     transition: all 0.15s;
+    }
+    a.button5:hover{
+     text-shadow: 0 0 2em rgba(255,255,255,1);
+     color:#FFFFFF;
+     border-color:#FFFFFF;
+    }
+    @media all and (max-width:30em){
+     a.button5{
+      display:block;
+      margin:0.4em auto;
+    }
+} 
